{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 635,
  "lineage": "6073ee90-c5c2-8cd7-069c-78d6f7a9827a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/zones/us-central1-c/instanceGroups/lb-backend-example",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-02-29T17:05:08.473-08:00",
            "enable_cdn": false,
            "fingerprint": "hdhzWGv-m64=",
            "generated_id": 1335061729218697003,
            "health_checks": [
              "projects/pruebatecnica-415517/global/healthChecks/http-basic-check"
            ],
            "id": "projects/pruebatecnica-415517/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "pruebatecnica-415517",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-29T17:04:34.412-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pruebatecnica-415517/global/firewalls/fw-allow-health-check",
            "log_config": [],
            "name": "fw-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/networks/default",
            "priority": 1000,
            "project": "pruebatecnica-415517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/firewalls/fw-allow-health-check",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.49.54.7",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-02-29T17:04:34.278-08:00",
            "id": "projects/pruebatecnica-415517/global/addresses/lb-ipv4-1",
            "name": "lb-ipv4-1",
            "prefix_length": 0,
            "project": "pruebatecnica-415517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/addresses/lb-ipv4-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/pruebatecnica-415517/global/forwardingRules/http-content-rule",
            "ip_address": "projects/pruebatecnica-415517/global/addresses/lb-ipv4-1",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "http-content-rule",
            "port_range": "80-80",
            "project": "pruebatecnica-415517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/forwardingRules/http-content-rule",
            "target": "projects/pruebatecnica-415517/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_global_address.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bal_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240213",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/zones/us-central1-c/disks/bal-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pruebatecnica-415517/zones/us-central1-c/instances/bal-instance",
            "instance_id": "4918831511002453837",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata": {
              "ssh-keys": "franramosguardiola:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCpcWrsSYRUWzpRWWW13NWy4woMw0LR8gx+55jXi3NtAcMoemm/PN1rH/bh2cOrskZcziQINmNTQuxx7WJw+1ghoZpc1YXRqrYXKktNYkTmPHixtLld/c2XzPDAb/4rO2GzC1fWxfr8lO37M0fNNd2oZPrfVhm8rTQGd4OssaGJm6W3cIoP7T7T1KRQCbeLApbFIcGih3+1vwK0oSBMLZ3QIXl+dKxiK7/xtn7QCxIpfIwnaTDM4VuNplm/PjtxxoMKGPLLWomqP0nVkOoFObHBzpChwiz0Ao8uyjxfu2MuLGyf8aeNrCrdzNRMPX9MRTEpZpwi+ymnC9DtNV9i2OkEIoSnIiQBwyUqTKrO30IB/SgpeXOUdrs9NgbgU8dv/IHRaI1VYTIKnyh2fKP+h3sspo5zOVP9S1 [...]
            },
            "metadata_fingerprint": "nvBRUKAF21Q=",
            "name": "bal-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.210.55",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/networks/default",
                "network_ip": "10.128.0.41",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/regions/us-central1/subnetworks/default",
                "subnetwork_project": "pruebatecnica-415517"
              }
            ],
            "project": "pruebatecnica-415517",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/zones/us-central1-c/instances/bal-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "us-central1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/pruebatecnica-415517/global/networks/red-local-pt",
            "mtu": 0,
            "name": "red-local-pt",
            "project": "pruebatecnica-415517",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/networks/red-local-pt"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-29T17:05:41.880-08:00",
            "id": "projects/pruebatecnica-415517/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "pruebatecnica-415517",
            "proxy_bind": false,
            "proxy_id": 8579437811035051786,
            "self_link": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/urlMaps/web-map-http"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-29T17:05:30.624-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Trv5HwJMems=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/pruebatecnica-415517/global/urlMaps/web-map-http",
            "map_id": 688994065446639413,
            "name": "web-map-http",
            "path_matcher": [],
            "project": "pruebatecnica-415517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pruebatecnica-415517/global/urlMaps/web-map-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default"
          ]
        }
      ]
    }
  ]
}